fix modal z-index
git-svn-id: https://forge.indepnet.net/svn/glpi/trunk@22880 35612d4c-9d10-0410-837c-bf9dd1be60d7

--- a/css/jquery-glpi.css
+++ b/css/jquery-glpi.css
@@ -1,3 +1,5 @@
+.ui-dialog { z-index: 10000 !important ;}
+
 .ui-widget-content a { color: #659900; }
 .ui-widget-content span.vsubmit, a.vsubmit {color: #8f5a0a;}
 /* css for timepicker */
